更新前端资源